[project]
name = "quick-seo-audit-tools"
version = "0.0.5"
authors = [
  { name="Geoff Lambeth", email="geoff.lambeth@geofflambeth.com" },
]
description = "CLI tools to quickly collect data and help audit webpages with tedious SEO tasks in mind."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "bs4",
    "lxml",
    "pandoc",
    "sqlalchemy"
    ]

[project.scripts]
seo-tools = "quick_seo_audit_tools.main:main_cli"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
