[project]
name = "seo_tools"
version = "0.1.0"
authors = [
  { name="Geoffrey Conley", email="seo-tools@geofflambeth.com" },
]
description = "CLI tools to quickly collect data and help audit webpages with tedious SEO tasks in mind."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "requests",
    "bs4",
    "lxml",
    "pandoc",
    "sqlalchemy",
    "matplotlib",
    "networkx",
    "gravis",
    "scipy",
    "flask"
    ]

[project.scripts]
seo-tools = "seo_tools.__main__:main_cli"

[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"
